--- a/mobee-app/app/index.html
+++ b/mobee-app/app/index.html
@@ -1,41 +1,48 @@
 <!DOCTYPE html>
 <html ng-app='mobee'>
-<head>
-<meta charset="utf-8" />
-<link rel="stylesheet" type="text/css" href="styles/style.css" />
-</head>
-<body>
-  <h1 class=''>Mobee</h1>
-  <div ng-controller='appController'>
+
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="styles/styles.css" />
+  </head>
+
+  <body>
+    <h1 class=''>Mobee</h1>
+
+    <div ng-controller='appController'>
 
 
-  <form>
-    <input type="search" ng-change='findMovie()' ng-model='film'/>
-    <select size="6"  ng-repeat = 'films in search'  >
-    <option ng-click='addToMovies(films.Title)'> {{ films.Title }} </option>
-    </select>
-    <button>Find</button>
-  </form>
+      <form >
+        <input type="search" ng-change='findMovie()' ng-model='film'/>
+      </form>
+      <button>Find</button>
+        <table ng-repeat = 'films in search ' >
+          <th class='btn' ng-click='addToMovies(films.Title)'> {{ films.Title }} </th>
+        </table>
+      <br>
 
-  <table style="border: 1px solid #000;" > 
-    <tr >
-      <th>Movier</th>
-      <th>Poster</th>
-      <th>Plot</th>
-      <th>Year</th>
-      <th>Awards</th>
-    </tr> 
-    <tr ng-repeat="movie in data.movies">
-      <td> {{ movie.Title }} </td>
-      <td> <img src="{{ movie.Poster }}" style="width:120px;height:200px;"> </td>
-      <td> {{ movie.Plot }} </td>
-      <td> {{ movie.Year }} </td>
-      <td> {{ movie.Awards }} </td>
-    </tr>
-  </table>
-  <br>
-  </div>
-</body>
-<script src="bower_components/angular/angular.js"></script>
-<script type="text/javascript" src="app.js"></script>
+      <table>
+        <th ng-repeat="movie in data.movies" style="border: 1px solid #000;" class='box'>
+        <button >delete</button>
+          <h2> {{ movie.Title }} </h2>
+          <div> <img src="{{ movie.Poster }}" style="width:120px;height:200px;"> </div>
+          <br>
+          <h3> Rating : {{ movie.imdbRating }} </h3>
+          <br>
+          <h3> Genre: {{ movie.Genre }} </h3>
+          <div>
+            <p> {{ movie.Plot }} </p>
+            <br>
+            <a> {{ movie.Year }} </a>
+            <br>
+            <a> {{ movie.Awards }} </a>
+          </div>
+        </th>
+      </table>
+    </div>
+
+  </body>
+
+  <script src="bower_components/angular/angular.js"></script>
+  <script type="text/javascript" src="app.js"></script>
 </html>
