server is working now

--- a/mobee-app/public/index.html
+++ b/mobee-app/public/index.html
@@ -21,7 +21,7 @@
 
     <!-- ANGULAR DYNAMIC CONTENT -->
 
-    <div ng-view></div>
+    <div ui-view></div>
 
 </div>
     <script src="bower_components/angular/angular.js"></script>
