--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>moBee!</title>
 
     <!-- CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css"> <!-- custom styles -->
     <link rel="stylesheet" href="lib/angular-material/angular-material.css" />
