--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <link rel="shortcut icon" href="">
-    <title>moBee!</title>
+    <title>🐝MoBee!</title>
 
     <!-- CSS -->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
