--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <script src="lib/angular-aria/angular-aria.js"></script>
     <script src="lib/angular-messages/angular-messages.js"></script>
     <!-- ANGULAR CUSTOM -->
+    <script src="js/controllers/homePageController.js"></script>
     <script src="js/controllers/mainCtrl.js"></script>
     <script src="js/services/mainFactory.js"></script>
     <script src="js/app.js"></script>
